--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <hr>
 </header>
 
-<audio src="resources/dot_5wpm_500hz.wav" id="dot_audio"></audio>
-<audio src="resources/dash_5wpm_500hz.wav" id="dash_audio"></audio>
+<!-- <audio src="resources/dot.wav" id="dot_audio" muted></audio>
+<audio src="resources/dash.wav" id="dash_audio" muted></audio> -->
+<button id="button" type="button">play</button>
 
 <div id="container"></div>
 
