added some explanation text

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <hr>
 </header>
 
+<p>type the word you hear into the text box (in regular english). a new word will be generated when you correctly type the word</p>
+<p>check the console logs for the answer if you get stuck</p>
+
 <button id="playbutton" type="button">play</button>
 <button id="stopbutton" type="button">stop</button>
 
