--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <hr>
 </header>
 
+<p>type the word you hear into the text box (in regular english). a new word will be generated when you correctly type the word</p>
+<p>check the console logs for the answer if you get stuck</p>
+
 <button id="playbutton" type="button">play</button>
 <button id="stopbutton" type="button">stop</button>
 
@@ -137,7 +140,11 @@ playbutton.onclick = async () => {
 };
 
 // on stop button click, stop current word
-stopbutton.onclick = async () => await ctx.close();
+stopbutton.onclick = async () => {
+    if (ctx) {
+        await ctx.close().then(() => ctx = null);
+    }
+};
 
 
 /* * * * * audio * * * * */
@@ -163,7 +170,17 @@ function fetchBuffers(ctx) {
 
 // play audio of a morse code string
 async function playMorseAudio(str) {
-    await ctx.close();
+    if (ctx) {
+        await ctx.close().then(() => {
+            ctx = null;
+            createMorseBuffer(str);
+        });
+    } else {
+        createMorseBuffer(str);
+    }
+}
+
+function createMorseBuffer(str) {
     ctx = new (window.AudioContext || window.webkitAudioContext)();
     let time = 0;
 
@@ -199,10 +216,16 @@ textbox.addEventListener('input', async () => {
 
     if (randWord == response) {
         textbox.value = "";
-        await ctx.close().then(async () => {
+        if (ctx) {
+            await ctx.close().then(async () => {
+                ctx = null;
+                generateWord();
+                await playMorseAudio(morseWord);
+            });
+        } else {
             generateWord();
             await playMorseAudio(morseWord);
-        });
+        } 
     }
 });
 
