added enter key + result message

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 <hr>
 </header>
 
-<p>type the word you hear into the text box (in regular english). a new word will be generated when you correctly type the word</p>
+<p>press play or enter to start and replay the current word<p>
+<p>type the word you hear into the text box (in regular english)</p>
 <p>check the console logs for the answer if you get stuck</p>
+<p>when you get the correct answer, press play or enter to go to next word</p>
 
 <button id="playbutton" type="button">play</button>
 <button id="stopbutton" type="button">stop</button>
 
-<div id="container"></div>
 <input type="text" id="textbox">
+<p id="hint"></p>
+<p id="result"></p>
 
 <!-- <script type="module" src="src/generator.js"></script> -->
 <script type="text/javascript">
@@ -114,30 +117,75 @@ var beepDelay = 0.075
 var initialized = false;
 var ctx = null;
 var dot = null, dash = null;
+var hiddenHint = true;
 var randWord = null;
 var morseWord = null;
 
 var playbutton = document.getElementById("playbutton");
 var stopbutton = document.getElementById("stopbutton");
-var container = document.getElementById("container");
 var textbox = document.getElementById("textbox");
+var hint = document.getElementById("hint");
+var result = document.getElementById("result");
 
 
 /* * * * * buttons * * * * */
 
-// on play button click, play/replay current word
-playbutton.onclick = async () => {
+// on play button click, play current word
+playbutton.onclick = playCurrWord;
+
+
+// on enter key, play current word
+textbox.addEventListener("keyup", async function(event) {
+    if (event.keyCode === 13) {
+        playCurrWord();
+    }
+});
+
+// start or go to next word, or replay current word
+async function playCurrWord() {
     if (!initialized) {
         await initAudio().then(async () => {
             initialized = true;
-            generateWord();
-            await playMorseAudio(morseWord);
+            hint.innerHTML = "click to show/hide hint";
+            generateNext();
         })
-    }
-    else {
+    } else if (correct) {
+        correct = false;
+        textbox.value = "";
+
+        hiddenHint = true;
+        hint.innerHTML = "click to show/hide hint";
+
+        // fade out success message
+        setTimeout(function() {
+            var timerId = setInterval(function() {
+                let opacity = result.style.opacity;
+                if (opacity == 0) {
+                    clearInterval(timerId);
+                } else {
+                    result.style.opacity = opacity - 0.05;
+                }
+            }, 50);
+        }, 100);
+
+        generateNext();
+    } else {
         await playMorseAudio(morseWord);
     }
-};
+}
+
+// show/hide hint
+window.onload = function() {
+    hint.onclick = function () {
+        if (hiddenHint) {
+            hiddenHint = false;
+            hint.innerHTML = morseWord;
+        } else {
+            hiddenHint = true;
+            hint.innerHTML = "click to show/hide hint";
+        }
+    };
+}
 
 // on stop button click, stop current word
 stopbutton.onclick = async () => {
@@ -202,32 +250,44 @@ function createMorseBuffer(str) {
 
 /* * * * * word generation and matching * * * * */
 
-// generate new random word
-function generateWord() {
-    randWord = getRandomWord();
-    morseWord = toMorseText(randWord);
-    console.log(randWord + "\n" + morseWord);
-    // container.innerHTML = randWord + "\n" + morseWord;
-}
-
 // when text box input matches, genenerate new word
 textbox.addEventListener('input', async () => {
     let response = textbox.value;
 
     if (randWord == response) {
-        textbox.value = "";
         if (ctx) {
             await ctx.close().then(async () => {
                 ctx = null;
-                generateWord();
-                await playMorseAudio(morseWord);
+                handleSuccess();
+                
             });
         } else {
-            generateWord();
-            await playMorseAudio(morseWord);
+            handleSuccess();
         } 
     }
 });
+
+var correct = false;
+
+// set response when entered correct answer
+function handleSuccess() {
+    correct = true;
+    result.style.opacity = 1;
+    result.innerHTML = "correct!<br />" + randWord;
+}
+
+// start next round
+async function generateNext() {
+    generateWord();
+    await playMorseAudio(morseWord);
+}
+
+// generate new random word
+function generateWord() {
+    randWord = getRandomWord();
+    morseWord = toMorseText(randWord);
+    console.log(randWord + "\n" + morseWord);
+}
 
 
 </script>
