added enter key + result message

--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
 <hr>
 </header>
 
-<p>type the word you hear into the text box (in regular english). a new word will be generated when you correctly type the word</p>
+<p>press play or enter to start and replay the current word<p>
+<p>type the word you hear into the text box (in regular english)</p>
 <p>check the console logs for the answer if you get stuck</p>
+<p>when you get the correct answer, press play or enter to go to next word</p>
 
 <button id="playbutton" type="button">play</button>
 <button id="stopbutton" type="button">stop</button>
 
 <div id="container"></div>
 <input type="text" id="textbox">
+
+<p id="result"></p>
 
 <script type="module" src="src/generator.js"></script>
 
