changed style to dark mode + added style to buttons + textbox

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <header>
-<h1 id="pg-title"><a href="./index.html">Morse Code Practice</a></h1>
+<h1 id="pg-title">Morse Code Practice</h1>
 <hr>
 </header>
 
@@ -20,10 +20,10 @@
 <p>check the console logs for the answer if you get stuck</p>
 <p>when you get the correct answer, press play or enter to go to next word</p>
 
-<button id="playbutton" type="button">play</button>
+<button id="playbutton" type="button">play</button>&nbsp;
 <button id="stopbutton" type="button">stop</button>
 
-<input type="text" id="textbox">
+<p><input type="text" id="textbox"></p>
 <p id="hint"></p>
 <p id="result"></p>
 
